[tool.poetry]
name = "logging"
version = "0.1.0"
description = ""
authors = ["Merilyn Chesler"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
flake8 = "6.0.0"
isort = "5.11.4"
pre-commit = "2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
